Refactoring in preparation for analysis using `ts.Program`
- move shared code from AbstractEslintSensor to AnalysisProcessor
- remove code related to MissingTypescript
- minor cleanups